<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_name">Showdown!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="request_sent">Waiting for server responses…</string>
    <string name="forfeit">Forfeited!</string>
    <string name="loading">Loading…</string>
    <string name="weak_connection">Failed to connect to server… it needs a thing called \'Internet Connection\'</string>
    <string name="no_connection">Weak signal… maybe move your camp trailer to somewhere near civilization?</string>
    <string name="still_in_development">TEASER ALERT: feature still in development</string>
    <string name="teaser_alert">Teaser Alert</string>
    <string name="multiple_battle_alert">Focus on the current battle, dude…</string>
    <string name="server_error">Cannot connect to Showdown server. Plz try again later :(</string>
    <string name="request_error">Server error :( plz close this battle</string>
    <string name="waiting_for_server">Waiting for server…</string>
    <string name="ok">OK</string>
    <string name="error_server_notavailable">Server not available</string>
    <string name="update_available">Update %s available!</string>
    <string name="downloadingupdate">Downloading update</string>
    <string-array name="server">
        <item>Smogon University (official server)</item>
        <item>Smogon Tournaments</item>
    </string-array>
    <string name="choose_username">Choose Username</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="name_has_been_registered">This username has been registered</string>
    <string name="pick_another_name">Pick another name</string>
    <string name="sign_out">Sign Out</string>
    <string name="avatar">Avatar</string>
    <string name="find_battle">Find Battle</string>
    <string name="watch_battle">Watch Battle</string>
    <string name="challenge_battle">Challenge</string>
    <string name="waiting_challenge_dialog">Challenging %1$s in %2$s</string>
    <string name="cancel_search">Chicken Out</string>
    <string name="no_available_battle">There is no active battle in this format</string>
    <string name="background">Background</string>
    <string name="battlelog">Battle Log</string>
    <string name="log">Log</string>
    <string name="timer">Timer</string>
    <string name="skip_animation">Skip</string>
    <string name="pokemon_icon">Pokemon Icon</string>
    <string name="turn">Turn 0</string>
    <string name="weather">Normal Weather</string>
    <string name="battle_switch">Switch</string>
    <string name="battle_attack">Attack</string>
    <string name="download_matches_inprogress">Tickets sold out! Sneaking into the stadium…</string>
    <string name="no_teams">Go catch some Pokémons first!</string>
    <string name="challenge_dialog_title">User to challenge</string>
    <string name="challenged_by"><b>%1$s</b> challenged you to</string>
    <string name="challenging">Challenging <b>%1$s</b> to</string>
    <string name="accept_challenge">Accept</string>
    <string name="reject_challenge">Reject</string>
    <string name="searching_battle">Prepare for trouble, and make it double…</string>
    <string name="advertise_dialog">Do you want to tell people that you are playing on Android? We will only send a short message at the start of each battle</string>
    <string name="advertise_message">I\'m playing on the PS Android application! For more information, check out http://spo.ink/psandroidthread</string>
    <string name="warning_dialog">This application isn\'t endorsed by PS or Smogon. If you have a bug to report, go to : http://spo.ink/psandroidthread</string>
    <string-array name="bar_left_drawer">
        <item>Battle Field</item>
        <item>Community Lounge</item>
        <item>Replays</item>
        <item>Credits</item>
    </string-array>
    <string name="bug_captured">Bug captured!</string>
    <string name="no_bugs">No bugs to report</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="bar_room">Room</string>
    <string name="bar_room_id">Show Room Id</string>
    <string name="clipboard">Copy to Clipboard</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing_patient">Refreshing, please be patient ^^</string>
    <string name="bar_cancel">Cancel</string>
    <string name="bug_report">Report bug</string>
    <string name="team_builder">Team Builder</string>
    <string name="bar_pokedex">Pokedex</string>
    <string name="bar_dmg_calc">Damage Calculator</string>
    <string name="bar_login">Trainer</string>
    <string name="bar_settings">Settings</string>
    <string name="donate">Please Contribute :)</string>
    <string name="dollar">$</string>
    <string name="donate_security">You can enter credentials on the next secured page. We don\'t save anything!</string>
    <string name="bar_pokedex_search">Search for Pokemon</string>
    <string name="pokedex_pokemon">PokeDex</string>
    <string name="pokedex_ability">AbilityDex</string>
    <string name="pokedex_item">ItemDex</string>
    <string name="pokedex_moves">MoveDex</string>
    <string name="back">Back</string>
    <string name="dmgcalc_switch">Switch</string>
    <string name="dmg_calc_field_singles">Singles</string>
    <string name="dmg_calc_field_doubles">Doubles</string>
    <string name="dmg_calc_field_none">None</string>
    <string name="dmg_calc_field_sun">Sun</string>
    <string name="dmg_calc_field_rain">Rain</string>
    <string name="dmg_calc_field_sand">Sand</string>
    <string name="dmg_calc_field_hail">Hail</string>
    <string name="dmg_calc_field_gravity">Gravity</string>
    <string name="dmg_calc_field_sr">SRocks</string>
    <string name="dmg_calc_field_0spike">0</string>
    <string name="dmg_calc_field_1spike">1</string>
    <string name="dmg_calc_field_2spike">2</string>
    <string name="dmg_calc_field_3spike">3 Spikes</string>
    <string name="dmg_calc_field_reflect">Reflect</string>
    <string name="dmg_calc_field_lightscreen">Light Screen</string>
    <string name="dmg_calc_field_foresight">Foresight</string>
    <string name="dmg_calc_field_helpinghand">Helping Hand</string>
    <string name="attacker">Attacker</string>
    <string name="defender">Defender</string>
    <string name="dmg_is_same">"%1$s, KO in %2$s round(s)</string>
    <string name="dmg_not_same_same_ko">"%1$s - %2$s\nKO in %3$s round(s)</string>
    <string name="dmg_not_same_not_same_ko">%1$s - %2$s\nKO in %3$s to %4$s rounds</string>
    <string name="dmg_is_same_outhealed">"%1$s\nYou\'re getting outhealed.</string>
    <string name="dmg_not_same_not_same_outhealed">%1$s - %2$s\nYou\'re getting outhealed.</string>
    <string name="dmg_not_same_not_same__maybe_outhealed">%1$s - %2$s\nKO in min. %3$s with a good chance of getting outhealed.</string>
    <string name="pokemon_list">Pokemon List</string>
    <string name="pokemon_fragment_description">Depends on the functionality, can be save, search, or empty</string>
    <string name="stats">Stats</string>
    <string name="stats_HP">HP</string>
    <string name="stats_Atk">Atk</string>
    <string name="stats_Def">Def</string>
    <string name="stats_Spd">Spe</string>
    <string name="stats_SpAtk">SpA</string>
    <string name="stats_SpDef">SpD</string>
    <string name="stats_BST">BST</string>
    <string name="EVs">EVs</string>
    <string name="IVs">IVs</string>
    <string name="save">Save</string>
    <string name="type_1">Type 1</string>
    <string name="type_2">Type 2</string>
    <string name="gender">Gender</string>
    <string name="move_type">Move Type</string>
    <string name="move_category">Move Category</string>
    <string name="move_power">Pow</string>
    <string name="move_acc">Acc</string>
    <string name="move_pp">PP</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Database…</string>
    <string name="search_label_pokemon">Search Pokemon…</string>
    <string name="search_label_ability">Search Ability…</string>
    <string name="search_label_item">Search Item…</string>
    <string name="search_label_moves">Search Move…</string>
    <string name="credits">To be updated! (nam.thai.cs@gmail.com)</string>
    <string name="bar_chatroom">Community Lounge</string>
    <string name="hint_chatroom">Please login to chat</string>
    <string-array name="actions_user_chatroom">
        <item>Challenge</item>
    </string-array>
    <string name="join_private_chatroom">Join other room</string>
    <string name="title_activity_team_building">Bill\'s PC</string>
    <string name="create_team">Create team</string>
    <string name="delete_team">Remove team</string>
    <string name="rename_team">Rename team</string>
    <string name="import_team">Import team</string>
    <string name="export_team">Export team</string>
    <string name="share_team">Share team</string>
    <string name="moves">Moves</string>
    <string name="team_created">Team created</string>
    <string name="team_removed">Team removed</string>
    <string name="team_removed_none">There is no team to remove</string>
    <string name="team_exported">Team exported to clipboard</string>
    <string name="team_exported_none">There is no team to export</string>
    <string name="team_imported">Team successfully imported</string>
    <string name="team_imported_invalid_data">Invalid data in clipboard</string>
    <string name="team_imported_empty">Empty clipboard</string>
    <string name="team_renamed">Team renamed</string>
    <string name="pokemon_nohelditem">No item</string>
    <string name="add_pokemon_button_text">Add a new Pokemon</string>
    <string name="replace_pokemon">Replace</string>
    <string name="remove_pokemon">Remove</string>
    <string name="export_title">Export destination</string>
    <string name="import_title">Import source</string>
    <string-array name="export_import_sources">
        <item>Clipboard</item>
        <item>Pastebin</item>
        <item>QR Code</item>
    </string-array>
    <string name="rename_pokemon">Rename</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="url_dialog_title">Enter URL</string>
    <string name="pastebin_url">http://pastebin.com/</string>
    <string name="error_dialog_title">Error</string>
    <string name="export_error_dialog_message">Exporting data failed!</string>
    <string name="import_error_dialog_message">Importing data failed!</string>
    <string name="export_success_dialog_title">Export successful!</string>
    <string name="import_success_dialog_title">Import successful!</string>
    <string name="export_inprogress">Exporting to pastebin…</string>
    <string name="import_inprogress">Importing from pastebin…</string>
    <string-array name="empty_team_list_filler">
        <item>No teams!</item>
    </string-array>
    <string name="exportQR_inprogress">Exporting to pastebin for QR…</string>
    <string name="happiness_min">Happiness changed to 0.</string>
    <string name="happiness_max">Happiness changed to 255.</string>
    <string name="speediv_modified">Speed IV modified.</string>
    <string name="ivs_modified">IVs changed to match Hidden Power.</string>
    <string name="mega_evolution">Mega-evolve</string>
    <string name="register_account">Register</string>
    <string name="login_successful">Successfully logged in as %s</string>
    <string name="ask_registration">Don\'t forget to register your account to keep your progress!</string>
    <string name="share_replay">Share replay</string>
    <string name="back_to_battle">Back to battle</string>
    <string name="exporting_replay">Exporting replay…</string>
    <string name="replay_exported">Replay exported : %s </string>
</resources>