<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pokemonshowdown.app.TeamBuildingActivity">
    <item
        android:id="@+id/action_create_team"
        android:icon="@drawable/ic_action_new"

        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/create_team" />

    <item
        android:id="@+id/action_remove_team"
        android:icon="@drawable/ic_action_discard"

        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/delete_team" />

    <!-- More -->
    <item
        android:id="@+id/a_More"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_rename_team"
                android:icon="@drawable/ic_action_labels"

                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/rename_team" />

            <item
                android:id="@+id/action_import_team"
                android:icon="@drawable/ic_action_import_export"

                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/import_team" />

            <item
                android:id="@+id/action_export_team"
                android:icon="@drawable/ic_action_import_export"

                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/export_team" />
        </menu>
    </item>


</menu>
