<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/uneditable_frame"
              android:layout_marginLeft="32dp"
              android:layout_marginTop="8dp"
              android:layout_marginRight="8dp"
              android:layout_marginBottom="8dp"
              android:weightSum="6">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/uneditable_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dmg_calc_field_singles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/dmg_calc_field_singles"/>

            <View style="@style/divider_vertical" />

            <TextView
                android:id="@+id/dmg_calc_field_doubles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="italic"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/dmg_calc_field_doubles"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/uneditable_frame"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/dmg_calc_field_gravity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="italic"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/dmg_calc_field_gravity"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:background="@drawable/uneditable_frame"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dmg_calc_field_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_none"/>

        <View style="@style/divider_vertical" />

        <TextView
            android:id="@+id/dmg_calc_field_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_sun"/>

        <View style="@style/divider_vertical" />

        <TextView
            android:id="@+id/dmg_calc_field_rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_rain"/>

        <View style="@style/divider_vertical" />

        <TextView
            android:id="@+id/dmg_calc_field_sand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_sand"/>

        <View style="@style/divider_vertical" />

        <TextView
            android:id="@+id/dmg_calc_field_hail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_hail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/uneditable_frame"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/dmg_calc_field_sr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_sr"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/uneditable_frame"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/dmg_calc_field_0spike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_0spike"/>

        <View style="@style/divider_vertical" />

        <TextView
            android:id="@+id/dmg_calc_field_1spike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_1spike"/>

        <View style="@style/divider_vertical" />

        <TextView
            android:id="@+id/dmg_calc_field_2spike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_2spike"/>

        <View style="@style/divider_vertical" />

        <TextView
            android:id="@+id/dmg_calc_field_3spike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_3spike"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/uneditable_frame"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/dmg_calc_field_reflect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_reflect"/>

        <View style="@style/divider_vertical" />

        <TextView
            android:id="@+id/dmg_calc_field_lightscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/dmg_calc_field_lightscreen"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/uneditable_frame">

            <TextView
                android:id="@+id/dmg_calc_field_foresight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="italic"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/dmg_calc_field_foresight"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/uneditable_frame"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/dmg_calc_field_helpinghand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textStyle="italic"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/dmg_calc_field_helpinghand"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>