<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TableRow
        android:weightSum="2">

        <TextView
            android:layout_margin="4dp"
            android:id="@+id/pokedex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableTop="@drawable/sprites_pichu"
            android:text="@string/pokedex_pokemon"
            android:layout_weight="1"
            android:background="@drawable/editable_frame"/>

        <TextView
            android:layout_margin="4dp"
            android:id="@+id/movedex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableTop="@drawable/sprites_magby"
            android:text="@string/pokedex_moves"
            android:layout_weight="1"
            android:background="@drawable/editable_frame"/>

    </TableRow>

    <TableRow
        android:weightSum="2">

        <TextView
            android:layout_margin="4dp"
            android:id="@+id/itemdex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableTop="@drawable/sprites_igglybuff"
            android:text="@string/pokedex_item"
            android:layout_weight="1"
            android:background="@drawable/editable_frame"/>

        <TextView
            android:layout_margin="4dp"
            android:id="@+id/abilitydex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawableTop="@drawable/sprites_aron"
            android:text="@string/pokedex_ability"
            android:layout_weight="1"
            android:background="@drawable/editable_frame"/>

    </TableRow>

</TableLayout>
