<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:text="@string/name_has_been_registered"
        android:textColor="#CC0000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <View style="@style/divider"/>

    <TextView
        android:id="@+id/onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/sign_in"
        android:textColor="@drawable/dialog_button"/>

    <View style="@style/divider"/>

    <TextView
        android:id="@+id/new_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/pick_another_name"
        android:textColor="@drawable/dialog_button"/>

</LinearLayout>